unpackaged/main/default/objects/Campaign/fields/Actual_Apps_Funded__c.field-meta.xml
<CustomField>
    <fullName>Actual_Apps_Funded__c</fullName>
    <formula>IF(( Opportunities_Agreements_Sent__c  +  Opportunities_Application_In__c +  Opportunities_Application_Missing_In__c +  Opportunities_Approved__c +  Opportunities_Closed_Lost__c +  Opportunities_Closed_Won__c +  Opportunities_Declined__c +  Opportunities_Default__c +  Opportunities_Funded__c + Opportunities_Ready_to_Submit__c +  Opportunities_Renewals__c + Opportunities_Signed__c + Opportunities_Underwriting__c  ) == 0, 0, (Opportunities_Closed_Won__c  / ( Opportunities_Agreements_Sent__c  +  Opportunities_Application_In__c +  Opportunities_Application_Missing_In__c +  Opportunities_Approved__c +  Opportunities_Closed_Lost__c +  Opportunities_Closed_Won__c +  Opportunities_Declined__c +  Opportunities_Default__c +  Opportunities_Funded__c + Opportunities_Ready_to_Submit__c +  Opportunities_Renewals__c + Opportunities_Signed__c + Opportunities_Underwriting__c  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual - Apps&gt;Funded%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>