unpackaged/main/default/objects/Campaign/fields/Actual_Leads_Apps__c.field-meta.xml
<CustomField>
    <fullName>Actual_Leads_Apps__c</fullName>
    <formula>IF(NumberOfLeads == 0, 0 , Opportunities_New_Deal__c  /  NumberOfLeads)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual - Leads&gt;Apps%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>