unpackaged/main/default/objects/Campaign/fields/Campaign_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code_Description__c</fullName>
    <label>Campaign Code Description</label>
    <type>TextArea</type>
</CustomField>