unpackaged/main/default/objects/Campaign/fields/Campaign_Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Data_Quality_Score__c</fullName>
    <formula>(IF( ISBLANK(  TEXT(Lead_Source__c ) ) , 0, 1) +
 IF(ISBLANK( Marketing_Vendor__c ) , 0, 1) +
IF(ISBLANK(  Campaign_Code__c ) , 0, 1) +
IF(ISBLANK(  Campaign_Code_Description__c ) , 0, 1) +
IF(ISBLANK(  StartDate ) , 0, 1) +
IF(ISBLANK(  EndDate ) , 0, 1) +
IF(ISBLANK(  Duration__c ) , 0, 1) +
IF(ISBLANK(  ActualCost ) , 0, 1) +
IF(  ISBLANK(  TEXT( Status ) ), 0, 1)) / 9</formula>
    <label>Campaign Data Quality Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>