unpackaged/main/default/objects/Campaign/fields/Campaign_Profit_Amt__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Profit_Amt__c</fullName>
    <formula>AmountWonOpportunities -  ActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>