unpackaged/main/default/objects/Campaign/fields/Closed_Bad_Lead__c.field-meta.xml
<CustomField>
    <fullName>Closed_Bad_Lead__c</fullName>
    <label># Closed - Bad Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>