unpackaged/main/default/objects/Campaign/fields/Closed_Can_t_Reach__c.field-meta.xml
<CustomField>
    <fullName>Closed_Can_t_Reach__c</fullName>
    <label># Closed - Can't Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>