unpackaged/main/default/objects/Campaign/fields/Closed_Not_Interested_Yet__c.field-meta.xml
<CustomField>
    <fullName>Closed_Not_Interested_Yet__c</fullName>
    <label># Closed - Not Interested Yet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>