unpackaged/main/default/objects/Campaign/fields/Closed_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Closed_Unqualified__c</fullName>
    <label># Closed - Unqualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>