unpackaged/main/default/objects/Campaign/fields/Commission_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Commission_Revenue__c</fullName>
    <label>$ Commission Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>