unpackaged/main/default/objects/Campaign/fields/Converted_Verbal_App__c.field-meta.xml
<CustomField>
    <fullName>Converted_Verbal_App__c</fullName>
    <label># Converted - Verbal App</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>