unpackaged/main/default/objects/Campaign/fields/Estimated_vs_Actual_Apps_Funded__c.field-meta.xml
<CustomField>
    <fullName>Estimated_vs_Actual_Apps_Funded__c</fullName>
    <formula>Actual_Apps_Funded__c  -  Expected_Apps_Funded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated vs. Actual (Apps&gt;Funded%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>