unpackaged/main/default/objects/Campaign/fields/Estimated_vs_Actual_Leads_Apps__c.field-meta.xml
<CustomField>
    <fullName>Estimated_vs_Actual_Leads_Apps__c</fullName>
    <formula>Actual_Leads_Apps__c -  Expected_Leads_Apps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated vs. Actual (Leads&gt;Apps%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>