unpackaged/main/default/objects/Campaign/fields/Expected_Apps_Funded__c.field-meta.xml
<CustomField>
    <fullName>Expected_Apps_Funded__c</fullName>
    <defaultValue>0.6</defaultValue>
    <label>Expected - Apps&gt;Funded%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>