unpackaged/main/default/objects/Campaign/fields/Expected_Leads_Apps__c.field-meta.xml
<CustomField>
    <fullName>Expected_Leads_Apps__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>Expected - Leads&gt;Apps%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>