unpackaged/main/default/objects/Campaign/fields/Funded__c.field-meta.xml
<CustomField>
    <fullName>Funded__c</fullName>
    <label># Funded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>