unpackaged/main/default/objects/Campaign/fields/FundedAmount__c.field-meta.xml
<CustomField>
    <fullName>FundedAmount__c</fullName>
    <label>$ Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>