unpackaged/main/default/objects/Campaign/fields/Marketing_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>