unpackaged/main/default/objects/Campaign/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <formula>NumberOfContacts  +  NumberOfLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>