unpackaged/main/default/objects/Campaign/fields/Open_Attempting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Open_Attempting_Contact__c</fullName>
    <label># Open - Attempting Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>