unpackaged/main/default/objects/Campaign/fields/Open_Awaiting_App_App_Sent__c.field-meta.xml
<CustomField>
    <fullName>Open_Awaiting_App_App_Sent__c</fullName>
    <label># Open - Awaiting App (App Sent)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>