unpackaged/main/default/objects/Campaign/fields/Opportunities_Agreements_Sent__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Agreements_Sent__c</fullName>
    <label># Opportunities - Agreements Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>