unpackaged/main/default/objects/Campaign/fields/Opportunities_Application_In__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Application_In__c</fullName>
    <label># Opportunities - Application In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>