unpackaged/main/default/objects/Campaign/fields/Opportunities_Approved__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Approved__c</fullName>
    <label># Opportunities – Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>