unpackaged/main/default/objects/Campaign/fields/Opportunities_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Closed_Won__c</fullName>
    <label># Opportunities - Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>