unpackaged/main/default/objects/Campaign/fields/Opportunities_Declined__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Declined__c</fullName>
    <label># Opportunities – Declined</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>