unpackaged/main/default/objects/Campaign/fields/Opportunities_Default__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Default__c</fullName>
    <label># Opportunities – Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>