unpackaged/main/default/objects/Campaign/fields/Opportunities_Funded__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Funded__c</fullName>
    <label># Opportunities – Funded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>