unpackaged/main/default/objects/Campaign/fields/Opportunities_New_Deal__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_New_Deal__c</fullName>
    <label># Opportunities - New Deal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>