unpackaged/main/default/objects/Campaign/fields/Opportunities_Ready_to_Submit__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Ready_to_Submit__c</fullName>
    <label># Opportunities - Ready to Submit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>