unpackaged/main/default/objects/Campaign/fields/Opportunities_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Renewal__c</fullName>
    <label># Opportunities - Renewal Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>