unpackaged/main/default/objects/Campaign/fields/Opportunities_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Renewals__c</fullName>
    <label># Opportunities – Renewals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>