unpackaged/main/default/objects/Campaign/fields/Opportunities_Signed__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Signed__c</fullName>
    <label># Opportunities – Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>