unpackaged/main/default/objects/Campaign/fields/Opportunities_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Underwriting__c</fullName>
    <label># Opportunities – Underwriting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>