unpackaged/main/default/objects/Campaign/fields/ROI2__c.field-meta.xml
<CustomField>
    <fullName>ROI2__c</fullName>
    <description>The field will calculated  ROI% based on Total Value Won Opportunities and Actual Cost.</description>
    <formula>IF(ActualCost == 0, NULL, ((AmountWonOpportunities - ActualCost)  / ActualCost ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The field will calculated  ROI% based on Total Value Won Opportunities and Actual Cost.</inlineHelpText>
    <label>ROI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>