unpackaged/main/default/objects/Campaign/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <label>ROI%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>