unpackaged/main/default/objects/Campaign/fields/Target_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_List_Name__c</fullName>
    <label>Target List - Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>