unpackaged/main/default/objects/Campaign/fields/Target_List_SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>Target_List_SIC_Code__c</fullName>
    <label>Target List - SIC Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>